--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/registration}" th:object="${person}">
+<form th:method="POST" th:action="@{/registration}" th:object="${user}">
     <label for="username">Введите имя пользователя: </label>
     <input type="text" th:field="*{username}" id="username"/>
     <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
