--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello</title>
+    <title>admin</title>
 </head>
 <body>
-<h1>hello</h1>
+<h1>admin</h1>
 <a href = "/logout">Выйти</a>
 </body>
 </html>
