--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,9 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Security Example</title>
+    <link rel="icon" href="#">
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
+<p th:text="${user.getId()}">VALUE</p>
+<p th:text="${user.getName()}">VALUE</p>
+<p th:text="${user.getEmail()}">VALUE</p>
+<p th:text="${user.getUsername()}">VALUE</p>
+
 <a href = "/logout">Выйти</a>
 
 </body>
