--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -28,6 +28,14 @@
     <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     <br><br>
     <br><br>
+    <label>Roles:
+        <input type="checkbox" name="roles"
+               th:each="role : ${allRoles}"
+               th:text="${role.name}"
+               th:value="${role.id}"
+        />
+    </label>
+    <br><br>
     <input type="submit" value="Создать"/>
 </form>
 
