--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:security="">
+
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-<p th:text="${user.getId()}">VALUE</p>
-<p th:text="${user.getName()}">VALUE</p>
-<p th:text="${user.getEmail()}">VALUE</p>
-<p th:text="${user.getUsername()}">VALUE</p>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" th:text="${user.getEmail()} + ' with roles: ' + ${user.rolesToString()}" href="#">ЕМАИЛ И
+        РОЛЬ</a>
+    </div>
+    <a th:href="@{/logout}" class="btn btn-link text-white-50">Logout</a>
+    </div>
+    </div>
+</nav>
+<div class="row no-gutters ">
+    <nav id="sidebarMenu" class="col-md-2 col-lg-2 d-md-block sidebar collapse">
+        <div class="position-sticky pt-2">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/user">
+                        User
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="col-md-10 bg-light">
+        <div class="tab-content">
+            <div class="container-fluid">
+                <h1>User information-page</h1>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-users" role="tabpanel"
+                         aria-labelledby="nav-home-tab">
+                        <div class="panel panel-default active">
+                            <div class="panel-body">
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th class="panel-heading h5">About user</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">firstName</th>
+                                        <th scope="col">lastName</th>
+                                        <th scope="col">age</th>
+                                        <th scope="col">Email</th>
+                                        <th scope="col">Role</th>
+                                        <hr/>
 
-<a href = "/logout">Выйти</a>
+                                    </tr>
+                                    <tr>
+                                        <td th:text="${user.getId()}"></td>
+                                        <td th:text="${user.getFirstName()}"></td>
+                                        <td th:text="${user.getLastName()}"></td>
+                                        <td th:text="${user.getAge()}"></td>
+                                        <td th:text="${user.getEmail()}"></td>
+                                        <td th:text="${user.rolesToString()}"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
 
 </body>
 </html>
