--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,18 +7,23 @@
 <body>
 
 <form th:method="POST" th:action="@{/registration}" th:object="${user}">
-    <label for="username">Введите логин пользователя: </label>
-    <input type="text" th:field="*{username}" id="username"/>
-    <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
+    <label for="name">Введите фамилию пользователя: </label>
+    <input type="text" th:field="*{lastName}" id="username"/>
+    <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName Error</div>
     <br/>
     <label for="name">Введите имя: </label>
-    <input type="text" th:field="*{name}" id="name"/>
-    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name Error
+    <input type="text" th:field="*{firstName}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">firstName Error
     </div>
     <br/>
     <label for="email">Введите email: </label>
     <input type="text" th:field="*{email}" id="email"/>
     <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error
+    </div>
+    <br/>
+    <label for="email">Введите возратс: </label>
+    <input type="text" th:field="*{age}" id="age"/>
+    <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age Error
     </div>
     <br/>
     <label for="password">Введите пароль: </label>
