--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,7 +21,7 @@
     <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error
     </div>
     <br/>
-    <label for="email">Введите возратс: </label>
+    <label for="email">Введите возраcт: </label>
     <input type="text" th:field="*{age}" id="age"/>
     <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age Error
     </div>
