--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,7 +13,7 @@
 
 
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">ЕМАИЛ
+    <a class="navbar-brand"  th:text="${user1.getUsername()} + ' with roles: ' + ${user1.rolesToString()}" href="#">ЕМАИЛ
         И РОЛЬ</a>
     </div>
     <a th:href="@{/logout}" class="btn btn-link text-white-50">Logout</a>
