--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,7 +13,7 @@
 
 
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand"  th:text="${user1.getUsername()} + ' with roles: ' + ${user1.rolesToString()}" href="#">ЕМАИЛ
+    <a class="navbar-brand" th:text="${user1.getUsername()} + ' with roles: ' + ${user1.rolesToString()}" href="#">ЕМАИЛ
         И РОЛЬ</a>
     </div>
     <a th:href="@{/logout}" class="btn btn-link text-white-50">Logout</a>
@@ -78,7 +78,7 @@
                                             <th>Delete</th>
                                         </tr>
                                         </thead>
-                                        <tbody id="users-table"></tbody>
+                                        <tbody id="users-list"></tbody>
                                     </table>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                                     <th>Role</th>
                                 </tr>
                                 </thead>
-                                <tbody id="user-info"></tbody>
+                                <tbody id="about-user"></tbody>
                             </table>
                         </div>
                     </div>
@@ -306,6 +306,6 @@
         crossorigin="anonymous"></script>
 
 </body>
-<script src="../static/app.js"></script>
+<script src="../static/rest.js"></script>
 
 </html>
